--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         def subVersion = 0
-        versionName "2.1.8"
+        versionName "2.2.0"
         def vc = Integer.parseInt(versionName.replace(".", "")) * 10
         if (vc < 10000) {
             vc *= 10
@@ -191,7 +191,7 @@ andResGuard {
             "*.gif",
     ]
     sevenzip {
-        artifact = 'com.tencent.mm:SevenZip:1.2.18'
+        artifact = 'com.tencent.mm:SevenZip:1.2.21'
         //path = "/usr/local/bin/7za"
     }
 
@@ -209,20 +209,19 @@ andResGuard {
     // digestalg = "SHA-256"
 }
 dependencies {
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0')
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0')
 
     implementation "androidx.appcompat:appcompat:$androidx_version"
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
 
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.palette:palette:1.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.palette:palette-ktx:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation project(':executorengine')
@@ -251,12 +250,10 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.github.Vove7:recycler-fast-scroll:0.3.3'
 
-    implementation 'com.king.zxing:zxing-lite:1.1.1'
     implementation 'com.github.Vove7.MarkdownView:library:0.20.1'
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
 
     implementation project(path: ':speechLib')
-    implementation project(':admin-manager')
 
     implementation "com.github.infotech-group:android-drawable-dsl:0.3.0"
     def work_version = "2.4.0"
@@ -264,6 +261,9 @@ dependencies {
 
     implementation 'com.google.android:flexbox:2.0.1'
 
+    implementation 'com.github.jenly1314:ZXingLite:2.1.0'
+
+    compileOnly 'com.microsoft.design:fluent-system-icons:1.1.25'
 }
 repositories {
     flatDir {
