--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,8 @@
         android:name="android.permission.WRITE_SECURE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
 
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
+    <uses-permission
+        android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
     <uses-permission android:name="net.dinglisch.android.tasker.PERMISSION_RUN_TASKS" />
 
@@ -342,6 +343,24 @@
         <activity
             android:name=".activities.TimedTaskManagerActivity"
             android:label="定时任务" />
+        <activity
+            android:name=".activities.QRScanActivity"
+            android:theme="@style/CaptureTheme"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="${applicationId}.qr" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.QRScanActivity2"
+            android:theme="@style/CaptureTheme"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="${applicationId}.qr2" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="com.baidu.speech.APP_ID"
@@ -475,6 +494,19 @@
             android:foregroundServiceType="mediaProjection|location"
             android:label="前台服务"
             android:priority="1000" />
+        <receiver
+            android:label="@string/app_name"
+            android:name=".receivers.AdminReceiver"
+            android:description="@string/admin_desc"
+            android:permission="android.permission.BIND_DEVICE_ADMIN">
+
+            <meta-data
+                android:name="android.app.device_admin"
+                android:resource="@xml/device_admin" />
+            <intent-filter>
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+            </intent-filter>
+        </receiver>
 
         <!--        <receiver-->
         <!--            android:name=".receivers.JPushReceiver"-->
