--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.5.0'
+    ext.kotlin_version = '1.5.20'
     ext.greendao_version = '3.3.0'
     ext.vtp_version = '0.0.41'
     ext.androidx_version = '1.3.0'
@@ -12,17 +12,17 @@ buildscript {
         maven { url'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
         mavenCentral()
+        //noinspection JcenterRepositoryObsolete
+        jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.greenrobot:greendao-gradle-plugin:$greendao_version" // greendao
 
-        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.18'
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.21'
         classpath 'io.michaelrocks:paranoid-gradle-plugin:0.3.2'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -33,12 +33,12 @@ allprojects {
         maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
 
         mavenCentral()
+        //noinspection JcenterRepositoryObsolete
+        jcenter()
         maven { url "https://dl.bintray.com/drummer-aidan/maven/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         google()
-        maven {
-            url 'https://jitpack.io'
-        }
+        maven { url 'https://jitpack.io' }
     }
 }
 
