--- a/common/build.gradle
+++ b/common/build.gradle
@@ -61,7 +61,7 @@ task makeJar(type: Jar) {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
