--- a/rhino-android/build.gradle
+++ b/rhino-android/build.gradle
@@ -43,6 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation project(path: ':common')
     implementation 'net.lingala.zip4j:zip4j:1.3.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     //    implementation files('libs/text-core.jar')
 }
