--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,1 @@
-include ':app', ':executorengine', ':androlua', ':common', ':rhino-android', ':speechLib', ':admin-manager'
-//, ':push'
+include ':app', ':executorengine', ':androlua', ':common', ':rhino-android', ':speechLib'
